docs(migration.jdk25-upgrade-design): add pre-upgrade scan results
Grep-based survey of JDK-friction patterns confirms low-risk upgrade:
- 0 Thread.stop/SecurityManager/Thread.suspend usage
- 0 sun.* internal API imports
- 2 same-module reflection sites (Settings, IborLeg) — no --add-opens needed
- 0 real finalize() overrides
- ~12 .newInstance() deprecation warnings to clean up

Main work beyond pom bumps: small .newInstance() migration sweep,
slf4j 1.7 → 2.x compatibility check, junit 4.12 → 4.13.2 dependency
update.

Signed-off-by: Jose Moya <jlmoya@gmail.com>